arm_sve2/ms3/output/output-10107.err
run_svereg_ms3.cpp: In function ‘int main(int, char**)’:
run_svereg_ms3.cpp:704:17: error: ‘error_count’ was not declared in this scope; did you mean ‘error_t’?
  704 |                 error_count++;
      |                 ^~~~~~~~~~~
      |                 error_t
run_svereg_ms3.cpp:707:30: error: ‘error_count’ was not declared in this scope; did you mean ‘error_t’?
  707 |         cout << "Zeros: " << error_count << "/" << outputSize << "\n";
      |                              ^~~~~~~~~~~
      |                              error_t
srun: error: ss02-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss02-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss02-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss02-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss02-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss02-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss02-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss02-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss02-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss02-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss02-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss02-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss02-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss02-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss02-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss02-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss02-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss02-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss02-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
srun: error: ss02-gh01: task 0: Exited with exit code 2
slurmstepd: error: execve(): /home/slee/project/arm_sve2/ms3/./conv_layer: No such file or directory
rm: cannot remove 'conv_layer': No such file or directory
